# release-notes-from-pullrequests-action

./: README.md  action.yaml  pyproject.toml
src/: main.py  release_notes_from_pullrequests.py
tests/: test_create_release_notes_from_pullrequests.py
